<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.AuthFragment">

    <TextView
        android:id="@+id/tv_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Демо"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="ФинСтарт"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_demo" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/tv_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        style="@style/loginEditText"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_logo"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/et_password"
        style="@style/loginEditText"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rectangle_solid_primary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="Войти"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintWidth_percent=".5" />

    <TextView
        android:id="@+id/tv_slash_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="/"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_enter" />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/registration_title"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/tv_slash_login"
        app:layout_constraintEnd_toStartOf="@id/tv_slash_login"
        app:layout_constraintTop_toTopOf="@id/tv_slash_login" />

    <TextView
        android:id="@+id/tv_anonymously"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Анонимно"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/tv_slash_login"
        app:layout_constraintStart_toEndOf="@id/tv_slash_login"
        app:layout_constraintTop_toTopOf="@id/tv_slash_login" />

    <ImageView
        android:id="@+id/iv_anonymously_tooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_help_tooltip"
        android:tooltipText="@string/tooltip_help_anonymously"
        app:layout_constraintBottom_toBottomOf="@id/tv_anonymously"
        app:layout_constraintStart_toEndOf="@id/tv_anonymously"
        app:layout_constraintTop_toTopOf="@id/tv_anonymously" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_slash_login">

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Забыли пароль?"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>